Added swap operator to the specification:
- Added a swap statement subsection to the statements chapter.
- In that swap statement subsection, I defined the swap operator
and gave an example.  I also included index information and a reference
to lvalue expresions.
- I added the swap operator to the table of symbols in the lexical
structure chapter.
- I slightly modified the lvalue expressions subsection to cover
the swap statement case.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10525 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Expressions.tex
+++ b/spec/Expressions.tex
@@ -160,9 +160,10 @@ explicit conversion:
 \index{lvalue}
 
 An {\em lvalue} is an expression that can be used on the left-hand
-side of an assignment statement, passed to a formal argument of a
-function that has \chpl{out} or \chpl{inout} intent, or returned by a
-variable function.  Valid lvalue expressions include the following:
+side of an assignment statement or on both sides of a swap statement,
+that can be passed to a formal argument of a function that has \chpl{out} or 
+\chpl{inout} intent, or that can be returned by a variable function.  Valid 
+lvalue expressions include the following:
 \begin{itemize}
 \item
  Variable expressions.
