--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -90,6 +90,7 @@ language specially:
 {\bf symbols} & {\bf use} \\
 \hline
 \verb@= += -= *= /= **= %= &= |= ^= &&= ||= <<= >>=@ & assignment \\
+\verb@<=>@ & swap operator \\
 \verb@..@ & ranges \\
 \verb@...@ & variable argument lists \\
 \verb@&& || !@ & logical operators \\
