Added a sentence to the Swap Statement subsection to say that the compiler will create temporary variables as necessary to implement the swap statement.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10532 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Statements.tex
+++ b/spec/Statements.tex
@@ -195,9 +195,14 @@ swap-operator:
   <=>
 \end{syntax}
 
+To implement the swap operation, the compiler uses temporary variables
+as necessary.
+
 \begin{example}
 The following swap statement
 \begin{chapel}
+var a, b: real;
+
 a <=> b;
 \end{chapel}
 is semantically equivalent to:
