Added arraySlices test to list of targets in Makefile and to list of tests in README file.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10566 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -11,6 +11,7 @@ get started with Chapel program structure:
 It also contains a number of more interesting examples that
 demonstrate various Chapel features:
 
+     arraySlices.chpl       : examples of array slicing and reindexing
      beer.chpl              : computes lyrics to "99 bottles of beer"
      blockLU.chpl           : block LU factorization
      genericStack.chpl      : generic stack classes (list- and array-based)
