--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -16,7 +16,7 @@
       param, pragma,
       range, real, record, reduce, return,
       scan, select, serial, single, sparse, string, sync,
-      then, true, type,
+      then, true, tuple, type,
       uint, union, use,
       var,
       when, where, while,
